new proj/src/objects/GE_ES_MCS_Sales_Team_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this  field defines the approve for the particular Role and Region</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MCS_Sales_Team_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_External_ID_c__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>GE_ES_Sales_Region__c</referenceTo>
        <relationshipLabel>MCS Sales Team Assignments</relationshipLabel>
        <relationshipName>MCS_Sales_Team_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Roles__c</fullName>
        <inlineHelpText>This field describe the sales role in the system</inlineHelpText>
        <label>Roles</label>
        <picklist>
            <picklistValues>
                <fullName>Global Sales Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sales_Region__c</fullName>
        <inlineHelpText>This field defines the sales region for assignment</inlineHelpText>
        <label>Sales Region</label>
        <picklist>
            <picklistValues>
                <fullName>AIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_ES_Sub_P_L__c</fullName>
        <label>Sub P&amp;L</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_PL__c</fullName>
        <label>P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>GE_HQ_Region__c</referenceTo>
        <relationshipLabel>MCS Sales Team Assignments</relationshipLabel>
        <relationshipName>MCS_Sales_Team_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MCS Sales Team Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_ES_Sales_Region__c</columns>
        <columns>GE_ES_Roles__c</columns>
        <columns>GE_ES_Approver__c</columns>
        <columns>GE_ES_Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Sales Team Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MCS Sales Team Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>